@startuml
package com.iluwatar.builder {
  class App {
    - LOGGER : Logger {static}
    + App()
    + main(args : String[]) {static}
  }
  enum Autor {
    + CarlosDrummond {static}
    + ClariceLispector {static}
    + Darwin {static}
    + MachadoDeAssis {static}
    - title : String
    + toString() : String
    + valueOf(name : String) : Autor {static}
    + values() : Autor[] {static}
  }
  enum Editora {
    + Rocco {static}
    + Wish {static}
    + Record {static}
    + Darkside {static}
    + Suma {static}
    + toString() : String
    + valueOf(name : String) : Editora {static}
    + values() : Editora[] {static}
  }
  enum Datapublicacao{
    + 1994 {static}
    + 1940 {static}
    + 1935 {static}
    + 1992 {static}
    + 2022 {static}
    - title : String
    + toString() : String
    + valueOf(name : String) : Datapublicacao {static}
    + values() : Datapublicacao[] {static}
  }
  class Livro {
    - Autor : Autor
    - subtitulo : subtitulo
    - Editora : Editora
    - titulo : String
    - Datapublicacao : Datapublicacao
    - Livro(builder : Builder)
    + getAutor() : Autor
    + getsubtitulo() : subtitulo
    + getEditora() : Editora
    + gettitulo() : String
    + getDatapublicacao() : Datapublicacao
    + toString() : String
  }
  class Builder {
    - Datapublicacao : Datapublicacao
    - subtitulo : subtitulo
    - Editora : Editora
    - titulo : String
    - Autor : Autor
    + Builder(Autor : Autor, titulo : String)
    + build() : Livro
    + withAutor(Autor : Autor) : Builder
    + withSubtitulo(subtitulo : subtitulo) : Builder
    + withEditora(Editora : Editora) : Builder
  }

  }


Livro -->  "-titulo" titulo
Builder ..+ Livro
Livro -->  "-Autor" Autor
Builder -->  "-subtitulo" subtitulo
Livro -->  "-datapublicacao" datapublicacao
Builder -->  "-editora" editora
Livro -->  "-subtitulor" subtitulo
Builder -->  "-titulo" titulo
Livro-->  "-editora" editora
Builder -->  "-datapublicacao" datapublicacao
Builder -->  "-Autor" Autor
@enduml